tests/NormalTests/paczka1/small_fuzzy/57087058.err
Error in line 14: hAWuv A968 148,38
Error in line 10: yay5K5 A847 7,6
Error in line 1: hAWuv A968 97,9
